name:                aqi-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aqi-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable aqi-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , line-bot-sdk < 0.5.1
                     , lifted-base
                     , servant-server
                     , servant-client
                     , aeson
                     , aeson-qq
                     , extra
                     , vector
                     , text
                     , http-conduit
                     , connection
                     , transformers
                     , mtl
                     , monad-control
                     , stm
                     , wai
                     , warp
                     , hedis
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/moleike/aqi-bot
